# openai-docs-mcp-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  argparse  docker-compose.yml  json  playground.py  pyproject.toml  sys
.cursor/: mcp.json.example
docs/: ARCHITECTURE.md  EVAL_REPORT_TEMPLATE.md  EXPANSION_PLAN.md  IMPLEMENTATION_ROADMAP.md  PLAN.md  PROJECT_GUIDE.md
evals/benchmarks/: openai_docs_benchmark.json
evals/corpus/raw_pages/: batch.json  embeddings.json  function_calling.json  gpt_4_1.json  rate_limits.json  structured_outputs.json
evals/results/: baseline_local.json  latest_local.json
scripts/: count_tokens_split.py  export_book.py  full_gate_a_smoke.py  init_project.py  query.py  rebuild_split_markdown.py  refresh_doc_index.py  run_embed.py  run_eval.py  run_ingest.py  run_mcp.py  run_refresh.py  run_scrape.py  run_summarize.py  test_mcp_client.py
src/openai_docs_scraper/: book_export.py  browser.py  constants.py  db.py  embeddings.py  env.py  extract.py  ingest_cached.py  mcp_server.py  openai_ops.py  page_blurb.py  ranking.py  safe_paths.py  search.py  selenium_fetcher.py  sitemap.py  text.py
src/openai_docs_scraper/api/: __init__.py  deps.py  main.py  schemas.py
src/openai_docs_scraper/services/: __init__.py  answering.py  config.py  embedder.py  history.py  ingestion.py  project.py  refresh.py  (+4 more)
tests/: test_answering.py  test_export_paths.py  test_extract.py  test_history_and_changes.py  test_ingest_and_db.py  test_ranking.py  test_refresh.py  test_search.py  test_service_ready.py  test_sources.py  test_text.py
(+10 files in other folders)
