[project]
name = "llm-provider-docs-ledger"
version = "0.1.0"
description = "Agent-ready local retrieval and snapshot system for LLM provider API docs with SQLite, FTS5, FastAPI, and MCP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "setuptools>=68",
  "beautifulsoup4>=4.12.0",
  "blake3>=1.0.0",
  "httpx>=0.27.0",
  "lxml>=5.0.0",
  "markdownify>=0.11.6",
  "numpy>=1.26.0",
  "openai>=1.0.0",
  "playwright>=1.41.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "selenium>=4.20.0",
  "tenacity>=8.2.0",
  "tiktoken>=0.7.0",
  "undetected-chromedriver>=3.5.0",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
